Finalised Goggle V2 - Part 2 Update.
Have fun!

--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@
     font-family: Comic Sans MS;
     color: #e8eaed;
 
-    position: absolute;
-    top: 0;
-    margin-left: 1220px;
+    margin-top: -300px;
+    text-align:right;
     text-decoration: none;
+    cursor: pointer;
 }
