--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+
+    max-width: 100%;
 }
 .body {
     background-color: #202124;
