--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@
 .body {
     background-color: #202124;
 }
+.goggleOne {
+    display: block;
+}
 .feelinlucky {
     background-color: #303134;
     border: 1px solid #303134;
@@ -78,4 +81,61 @@
 .popup {
     font-family: Comic Sans MS;
     color: #5f5f5f;
+}
+
+
+.game {
+    width: 500px;
+    height: 200px;
+    border: 1px solid black;
+    margin: auto;
+    background-image: url(https://cdn.discordapp.com/attachments/920952514323546115/924006969336037376/sedf.gif);
+    background-position: center;
+}
+#character {
+    width: 20px;
+    height: 50px;
+    background-image: url(https://cdn.discordapp.com/attachments/920952514323546115/924129344790626314/ezgif-3-4758b12164.gif);
+    position: relative;
+    top: 150px;
+}
+.animate{
+    animation: jump 0.3s linear;
+}
+@keyframes jump{
+    0%{top: 150px;}
+    30%{top: 100px;}
+    70%{top: 100px;}
+    100%{top: 150px;}
+}
+
+#block {
+    background-image: url('https://cdn.discordapp.com/attachments/920952514323546115/924009934641840168/ezgif-2-17ab284b2e.gif');
+    width: 20px;
+    height: 20px;
+    position: relative;
+    top: 130px;
+    left: 500px;
+    animation: block 1s infinite linear;
+}
+@keyframes block{
+    0%{left: 500px}
+    100%{left: -20px}
+}
+p{
+    text-align: center;
+}
+h1 {
+    font: bold;
+    font-family: 'Comic Sans MS';
+}
+.oops {
+    font-family: Comic Sans MS;
+    text-align: center;
+    margin-top: 2%;
+
+    font-size: 30px;
+}
+.offlinegame {
+    display: none;
 }
