--- a/style.css
+++ b/style.css
@@ -19,6 +19,54 @@
 .body {
     background-color: #202124;
 }
+.themeimp {
+    font-family: Comic Sans MS;
+    position: absolute;
+    left: 70%;
+    top: 310px;
+    width: 50px;
+    height: 50px;
+    font-size: 10px;
+    border-radius: 5px;
+    background-color: #222222;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease;
+    outline: none; /* Added outline property */
+}
+
+.themeimp:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.themeexp {
+    font-family: Comic Sans MS;
+    position: absolute;
+    left: 74%;
+    top: 310px;
+    width: 50px;
+    height: 50px;
+    font-size: 10px;
+    border-radius: 5px;
+    background-color: #222222;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease;
+    outline: none; /* Added outline property */
+}
+
+.themeexp:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+
+  
 .goggleOne {
     display: block;
 }
