--- a/style.css
+++ b/style.css
@@ -21,31 +21,18 @@
 }
 .themeimp {
     font-family: Comic Sans MS;
-    position: absolute;
-    left: 70%;
-    top: 310px;
-    width: 50px;
-    height: 50px;
-    font-size: 10px;
-    border-radius: 5px;
-    background-color: #222222;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.3s ease;
-    outline: none; /* Added outline property */
-}
+    color: #e8eaed;
+    margin-top: -13px;
 
-.themeimp:hover {
-    transform: scale(1.1);
+    text-align:right;
+    text-decoration: none;
     cursor: pointer;
 }
 
 .themeexp {
     font-family: Comic Sans MS;
     position: absolute;
-    left: 74%;
+    left: 70%;
     top: 310px;
     width: 50px;
     height: 50px;
@@ -65,8 +52,6 @@
     cursor: pointer;
 }
 
-
-  
 .goggleOne {
     display: block;
 }
