--- a/style.css
+++ b/style.css
@@ -31,6 +31,17 @@
     font-weight: 1000;
     font-size: 20px;
 }
+.pfp {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative; 
+    left: calc(50% - 200px);
+    top: -290px;
+    left: -0px;
+}
 
 
 .body {
