--- a/style.css
+++ b/style.css
@@ -41,6 +41,15 @@
     left: 10px;
     top: 10px;
 }
+.avdecor {
+    width: 50px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    position: fixed; 
+    left: 10px;
+    top: 10px;
+}
 
 
 .body {
