Tabs fixed, profile updated, pop-bang updated

--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@
     font-size: 20px;
 }
 .tab2 {
-    width: 200px;
     height: 50px;
     margin-left: auto;
     margin-right: auto;
@@ -67,12 +66,11 @@
     cursor: pointer;
 }
 .tab1 {
-    width: 200px;
     height: 50px;
     margin-left: auto;
     margin-right: auto;
     position: fixed; 
-    left: 79px;
+    left: 13px;
     top: 10px;
 
     font-family: 'Courier New', Courier, monospace;
@@ -97,7 +95,7 @@
     margin-right: auto;
     position: fixed; 
     left: 10px;
-    top: 10px;
+    top: 50px;
 }
 .avdecor {
     width: 50px;
@@ -106,7 +104,7 @@
     margin-right: auto;
     position: fixed; 
     left: 10px;
-    top: 10px;
+    top: 50px;
 }
 
 .body {
@@ -142,6 +140,9 @@
         left: calc(50% - 170px);
         top: 80px; 
     }
+    .pfp {
+        display: none;
+    }
     .findtwtr {
         margin-left: auto;
         margin-right: auto;
@@ -175,6 +176,9 @@
         color: #e8eaed;
         font-weight: 1000;
         font-size: 20px;
+    }
+    .tab1 {
+        display: none;
     }
     .tab2 {
         width: 200px;
